// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CharRange > should correctly parse range as chars outside char class 1`] = `
{
  "body": {
    "end": 3,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": "Char",
        "start": 1,
        "type": "Simple",
        "value": "a",
      },
      {
        "charCode": 45,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "-",
      },
      {
        "charCode": 122,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": "z",
      },
    ],
    "kind": "Alternative",
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharRange > should correctly parse range with empty end as chars 1`] = `
{
  "body": {
    "end": 4,
    "expressions": [
      {
        "charCode": 97,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "a",
      },
      {
        "charCode": 45,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": "-",
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 5,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharRange > should correctly parse range with empty start as chars 1`] = `
{
  "body": {
    "end": 4,
    "expressions": [
      {
        "charCode": 45,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "-",
      },
      {
        "charCode": 122,
        "end": 3,
        "kind": "Char",
        "start": 3,
        "type": "Simple",
        "value": "z",
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 5,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharRange > should correctly parse range with hex 1`] = `
{
  "body": {
    "end": 11,
    "expressions": [
      {
        "end": 10,
        "from": {
          "charCode": 97,
          "end": 5,
          "kind": "Char",
          "start": 2,
          "type": "Hex",
          "value": "a",
        },
        "kind": "CharRange",
        "start": 2,
        "to": {
          "charCode": 122,
          "end": 10,
          "kind": "Char",
          "start": 7,
          "type": "Hex",
          "value": "z",
        },
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 12,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharRange > should correctly parse range with octal 1`] = `
{
  "body": {
    "end": 11,
    "expressions": [
      {
        "end": 10,
        "from": {
          "charCode": 97,
          "end": 5,
          "kind": "Char",
          "start": 2,
          "type": "Octal",
          "value": "a",
        },
        "kind": "CharRange",
        "start": 2,
        "to": {
          "charCode": 122,
          "end": 10,
          "kind": "Char",
          "start": 7,
          "type": "Octal",
          "value": "z",
        },
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 12,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharRange > should correctly parse range with unicode 1`] = `
{
  "body": {
    "end": 15,
    "expressions": [
      {
        "end": 14,
        "from": {
          "charCode": 97,
          "end": 7,
          "kind": "Char",
          "start": 2,
          "type": "Unicode",
          "value": "a",
        },
        "kind": "CharRange",
        "start": 2,
        "to": {
          "charCode": 122,
          "end": 14,
          "kind": "Char",
          "start": 9,
          "type": "Unicode",
          "value": "z",
        },
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 16,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`CharRange > should correctly parse simple char range 1`] = `
{
  "body": {
    "end": 5,
    "expressions": [
      {
        "end": 4,
        "from": {
          "charCode": 97,
          "end": 2,
          "kind": "Char",
          "start": 2,
          "type": "Simple",
          "value": "a",
        },
        "kind": "CharRange",
        "start": 2,
        "to": {
          "charCode": 122,
          "end": 4,
          "kind": "Char",
          "start": 4,
          "type": "Simple",
          "value": "z",
        },
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;
